  and others, with better support for plural and gender inflection, separate
  date and time, and also support to category and tag lists.

=== Bug fixes ===

* (mw:bug 21657) Message wikilog-item-brief-header/footer replaced by
  wikilog-summary-header/footer and others, with proper PLURAL support.
* (wl:issue 1) Improve header/footer item messages.

== Wikilog 1.0.1 ==

Nov 27, 2009

=== General notes ===

This is a bugfix release of the 1.0.x branch.  There are no database changes
since Wikilog 1.0.0.

=== New configuration options ===

* $wgWikilogSignAndPublishDefault: default state for the new "sign and
  publish" checkbox in the edit page for new articles.

=== New features ===

* New parameters 'date', 'time', 'updatedDate', 'updatedTime' and 'hasMore'
  for the template pager, used when embedding using templates. Old parameters
  'pubdate' and 'updated' were deprecated, and should be removed on v1.2.0.
* Wikilog article edit page now features a "sign and publish" checkbox that,
  when selected, automatically signs and publishes the article by adding an
  appropriate {{wl-publish:...}} parser function call at the end of the text.

=== Bug fixes ===

* wikilogImportDocumentation.php updated to work with MediaWiki 1.16.
* Fix pass-by-reference call warning on SkinTemplateTabs hook.
* Fix timezone warnings with {{wl-publish:...}} parser function.
* Allow 'wikilog-log-cmt-rejdel' message to use {{GENDER:...}}.


== Wikilog 1.0.0 ==

Oct 30, 2009

First stable release of the Wikilog extension.

=== General notes ===

Database patch archives were reset in the transition to version 1.0.0.  If
you was using a Wikilog version before 0.8.0, you should first upgrade to
the last 0.8.x version and then upgrade to the latest version.  The database
schema of 1.0.0 is the same of 0.8.x.


== Wikilog 0.8.2 ==

Oct 29, 2009

=== New features in 0.8.2 ===

* Users with edit and createtalk rights are allowed to use the post comment
  interface.

=== Bug fixes in 0.8.2 ===
