@@ -8,7 +8,7 @@ to the project:
 
 == Patch Contributors ==
 
--
+* Vitaliy Filippov
 
 == Translators ==
 
